@@ -55,7 +55,8 @@
   * Extract a compute_file_sha function. (Dave Borowitz)
 
   * Remove move_in_thin_pack as a separate method; add_thin_pack now completes
-    the thin pack and moves it in in one step. (Dave Borowitz)
+    the thin pack and moves it in in one step. Remove ThinPackData as well.
+    (Dave Borowitz)
 
   * Custom buffer size in read_zlib_chunks. (Dave Borowitz)
 
